--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,7 @@
                                              888
                                             o888o
      ###################################################################### -->
-    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="styles.css"></noscript>
-    <link rel="preload" href="bootstrap.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="bootstrap.css"></noscript>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <!-- ######################################################################
@@ -476,7 +473,7 @@
 </div>
 
 
-<script defer src="scripts.js"></script>
+<script src="scripts.js"></script>
 <!-- ######################################################################
 
              .oooooo..o     .               oooo
@@ -489,9 +486,13 @@
                                 .o..P'
                                 `Y8P'
      ###################################################################### -->
-<script defer>
-    (function(w){"use strict";if(!w.loadCSS){w.loadCSS=function(){}}var rp=loadCSS.relpreload={};rp.support=(function(){var ret;try{ret=w.document.createElement("link").relList.supports("preload")}catch(e){ret=false}return function(){return ret}})();rp.bindMediaToggle=function(link){var finalMedia=link.media||"all";function enableStylesheet(){link.media=finalMedia}if(link.addEventListener){link.addEventListener("load",enableStylesheet)}else if(link.attachEvent){link.attachEvent("onload",enableStylesheet)}setTimeout(function(){link.rel="stylesheet";link.media="only x"});setTimeout(enableStylesheet,3000)};rp.poly=function(){if(rp.support()){return}var links=w.document.getElementsByTagName("link");for(var i=0;i<links.length;i+=1){var link=links[i];if(link.rel==="preload"&&link.getAttribute("as")==="style"&&!link.getAttribute("data-loadcss")){link.setAttribute("data-loadcss",true);rp.bindMediaToggle(link)}}};if(!rp.support()){rp.poly();var run=w.setInterval(rp.poly,500);if(w.addEventListener){w.addEventListener("load",function(){rp.poly();w.clearInterval(run)})}else if(w.attachEvent){w.attachEvent("onload",function(){rp.poly();w.clearInterval(run)})}}if(typeof exports!=="undefined"){exports.loadCSS=loadCSS}else{w.loadCSS=loadCSS}}(typeof global!=="undefined"?global:this));
-</script>
+<link href="bootstrap.css" rel="stylesheet" media="screen">
+<style type="text/css">
+    .main__greeting {
+        font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+</style>
+
 </body>
 
 </html>
