--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
     <title>Smarthome</title>
 
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.png">
     <!-- ######################################################################
 
         .oooooo..o                     o8o                 .
