Performance [homework]: добавил rel='noopener', перенес bootstrap в styles, удалил @import

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
      ###################################################################### -->
      <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
      <noscript><link rel="stylesheet" href="styles.css"></noscript>
-     <link rel="preload" href="bootstrap.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-     <noscript><link rel="stylesheet" href="bootstrap.css"></noscript>
+     <link rel="preload" href="fonts/pt_sans.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+     <noscript><link rel="stylesheet" href="fonts/pt_sans.css"></noscript>
 </head>
 
 <!-- ######################################################################
@@ -134,7 +134,7 @@
                                 </div>
                             </div>
                             <div class="panel main__panel panel_device panel_out_bot">
-                                <a target="_blank" href="http://ya.ru"><img src="assets/banner.webp" border="0"></a>
+                                <a target="_blank" href="http://ya.ru" rel="noopener"><img src="assets/banner.webp" border="0"></a>
                             </div>
                         </div>
                     </div>
